--- a/Day 3/Python Pizza/task-info.yaml
+++ b/Day 3/Python Pizza/task-info.yaml
@@ -15,15 +15,8 @@ files:
   - name: solution.py
     visible: true
     learner_created: false
-status: Failed
+status: Solved
 feedback:
-  message: "'Welcome to Python Pizza Deliveries!\\nYour final bill is: $23.\\n' !=\
-    \ 'Welcome to Python Pizza Deliveries!\\nYour final bill is: $20.\\n'"
-  time: "Wed, 10 Sep 2025 12:24:36 UTC"
-  expected: |
-    Welcome to Python Pizza Deliveries!
-    Your final bill is: $23.
-  actual: |
-    Welcome to Python Pizza Deliveries!
-    Your final bill is: $20.
+  message: Congratulations!
+  time: "Thu, 25 Sep 2025 06:13:09 UTC"
 record: -1
